try fix dislay consistency

--- a/ErabliereIU/src/map/erablieres-map.component.html
+++ b/ErabliereIU/src/map/erablieres-map.component.html
@@ -49,6 +49,7 @@
     <div class="row mb-2">
         <div class="col-md-2">Nombre d'éléments: {{nombreElements}}</div>
         <div class="col-md-2">Durée: {{duration}} secondes</div>
+        <div class="col-md-2 text-error">{{error}}</div>
     </div>
 
     <div id="map" class="match-parent"></div>
