select alerte type base on if trio donnee is enable

--- a/ErabliereIU/src/alerte/ajouter-alerte.component.html
+++ b/ErabliereIU/src/alerte/ajouter-alerte.component.html
@@ -19,39 +19,39 @@
     <div *ngIf="typeAlerte == 1">
       <form [formGroup]="alerteForm">
           <div class="form-group mb-2">
-            <label class="form-label" title="Nom de l'alerte utiliser pour l'affichage">Nom: </label>
+            <label for="nom" class="form-label" title="Nom de l'alerte utiliser pour l'affichage">Nom: </label>
             <input class="form-control" type="text" formControlName="nom">
           </div>
           <div class="form-group mb-2">
-            <label class="form-label" title="Adresses courriel des destinataires. Vous pouvez entrer plusieurs adresses séparer par des points virgules.">Destinataires du courriel: </label>
+            <label for="destinataireCourriel" class="form-label" title="Adresses courriel des destinataires. Vous pouvez entrer plusieurs adresses séparer par des points virgules.">Destinataires du courriel: </label>
             <input class="form-control" type="text" formControlName="destinataireCourriel">
           </div>
           <div class="form-group mb-2">
-            <label class="form-label">Destinataires du SMS: </label>
+            <label for="destinataireSMS" class="form-label">Destinataires du SMS: </label>
             <input class="form-control" type="text" formControlName="destinataireSMS">
           </div>
           <div class="form-group mb-2">
-            <label class="form-label">Temperature Min.: </label>
+            <label for="temperatureMin" class="form-label">Temperature Min.: </label>
             <einput [formGroup]="alerteForm" name="temperatureMin" symbole="°C" />
           </div>
           <div class="form-group mb-2">
-            <label class="form-label">Temperature Max.: </label>
+            <label for="temperatureMax" class="form-label">Temperature Max.: </label>
             <einput [formGroup]="alerteForm" name="temperatureMax" symbole="°C" />
           </div>
           <div class="form-group mb-2">
-            <label class="form-label">Vaccium Min.: </label>
+            <label for="vacciumMin" class="form-label">Vaccium Min.: </label>
             <einput [formGroup]="alerteForm" name="vacciumMin" symbole="HG" />
           </div>
           <div class="form-group mb-2">
-            <label class="form-label">Vaccium Max.: </label>
+            <label for="vacciumMax" class="form-label">Vaccium Max.: </label>
             <einput [formGroup]="alerteForm" name="vacciumMax" symbole="HG" />
           </div>
           <div class="form-group mb-2">
-            <label class="form-label">Niveau Bassin Min.: </label>
+            <label for="niveauBassinMin" class="form-label">Niveau Bassin Min.: </label>
             <einput [formGroup]="alerteForm" name="niveauBassinMin" symbole="%" />
           </div>
           <div class="form-group mb-2">
-            <label class="form-label">Niveau Bassin Max.: </label>
+            <label for="niveauBassinMax" class="form-label">Niveau Bassin Max.: </label>
             <einput [formGroup]="alerteForm" name="niveauBassinMax" symbole="%" />
           </div>
         <button id="creer-alerte-donnees-btn" class="btn btn-primary mt-2 me-2 mb-3" (click)="onButtonCreerClick()">Créer</button>
@@ -64,29 +64,29 @@
     <div *ngIf="typeAlerte == 2">
       <form [formGroup]="alerteCapteurForm">
           <div class="form-group">
-            <label class="form-label">Nom: </label>
+            <label for="nom" class="form-label">Nom: </label>
             <input class="form-control" type="text" formControlName="nom">
           </div>
           <div class="form-group">
-            <label class="form-label">Capteur: </label>
+            <label for="idCapteur" class="form-label">Capteur: </label>
             <select class="form-control" formControlName="idCapteur">
               <option *ngFor="let capteur of capteurs" [value]="capteur.id">{{capteur.nom}}</option>
             </select>
           </div>
           <div class="form-group mb-2">
-            <label class="form-label">Destinataires du courriel: </label>
+            <label for="destinataireCourriel" class="form-label">Destinataires du courriel: </label>
             <input class="form-control" type="text" formControlName="destinataireCourriel">
           </div>
           <div class="form-group mb-2">
-            <label class="form-label">Destinataires du SMS: </label>
+            <label for="destinataireSMS" class="form-label">Destinataires du SMS: </label>
             <input class="form-control" type="text" formControlName="destinataireSMS">
           </div>
           <div class="form-group">
-            <label class="form-label">Min.: </label>
+            <label for="min" class="form-label">Min.: </label>
             <einput [formGroup]="alerteCapteurForm" name="min" symbole={{capteurSymbole()}} />
           </div>
           <div class="form-group mb-2">
-            <label class="form-label">Max.: </label>
+            <label for="max" class="form-label">Max.: </label>
             <einput [formGroup]="alerteCapteurForm" name="max" symbole={{capteurSymbole()}} />
           </div>
         <button id="creer-alerte-capteur-btn" class="btn btn-primary mt-2 me-2 mb-3" (click)="onButtonCreerAlerteCapteurClick()">Créer</button>
