--- a/ErabliereIU/src/rapport/degreejour/rapport-degre-jour.component.html
+++ b/ErabliereIU/src/rapport/degreejour/rapport-degre-jour.component.html
@@ -1,94 +1,60 @@
-<h4>Degré jour</h4>
-
 <form>
     <span class="text-danger">
         {{generalError}}
     </span>
     <div class="form-group">
         <label for="dateDebut">Date de début</label>
-        <input
-            name="dateDebut"
-            type="date"
-            class="form-control"
-            id="dateDebut"
-            value="{{form.dateDebut}}"
+        <input name="dateDebut" type="date" class="form-control" id="dateDebut" value="{{form.dateDebut}}"
             [(ngModel)]="form.dateDebut" />
-        <input-error 
-            [errorObj]="errorObj"
-            [controlName]="'dateDebut'"></input-error>
+        <input-error [errorObj]="errorObj" [controlName]="'dateDebut'"></input-error>
     </div>
     <div class="form-group">
         <label for="dateFin">Date de fin</label>
-        <input
-            name="dateFin"
-            type="date"
-            class="form-control"
-            id="dateFin"
-            value="{{form.dateFin}}"
+        <input name="dateFin" type="date" class="form-control" id="dateFin" value="{{form.dateFin}}"
             [(ngModel)]="form.dateFin" />
-        <input-error
-            [errorObj]="errorObj"
-            [controlName]="'dateFin'"></input-error>
+        <input-error [errorObj]="errorObj" [controlName]="'dateFin'"></input-error>
     </div>
     <div class="form-group">
         <label for="idCapteur">Capteur</label>
         <select name="idCapteur" class="form-control" id="idCapteur" (change)="idCapteurChanged($event)">
             <option value="">Sélectionner un capteur</option>
-            <option 
-                *ngFor="let capteur of capteurs" 
-                [value]="capteur.id">{{capteur.nom}}</option>
+            <option *ngFor="let capteur of capteurs" [value]="capteur.id">{{capteur.nom}}</option>
         </select>
-        <input-error
-            [errorObj]="errorObj"
-            [controlName]="'idCapteur'"></input-error>
+        <input-error [errorObj]="errorObj" [controlName]="'idCapteur'"></input-error>
     </div>
     <div class="form-group">
         <label for="utiliserTrioDonnees">Utiliser temperature depuis trio de données</label>
-        <input
-            name="utiliserTrioDonnees"
-            type="checkbox"
-            class="form-control-checkbox"
-            id="utiliserTrioDonnees"
+        <input name="utiliserTrioDonnees" type="checkbox" class="form-control-checkbox" id="utiliserTrioDonnees"
             [(ngModel)]="form.utiliserTemperatureTrioDonnee" />
-        <input-error
-            [errorObj]="errorObj"
-            [controlName]="'utiliserTrioDonnees'"></input-error>
+        <input-error [errorObj]="errorObj" [controlName]="'utiliserTrioDonnees'"></input-error>
     </div>
     <div class="form-group">
         <label for="seuil">Seuil</label>
-        <input
-            name="seuil"
-            type="number"
-            class="form-control"
-            id="seuil"
-            [(ngModel)]="form.seuilTemperature" />
-        <input-error
-            [errorObj]="errorObj"
-            [controlName]="'seuil'"></input-error>
+        <input name="seuil" type="number" class="form-control" id="seuil" [(ngModel)]="form.seuilTemperature" />
+        <input-error [errorObj]="errorObj" [controlName]="'seuil'"></input-error>
     </div>
-    <span 
-        class="btn btn-primary" 
-        (click)="onSubmit()"
-        (keypress)="onKeyPress($event)">Générer</span>
+    <div class="form-group">
+        <span class="btn btn-primary" (click)="onSubmit()" (keypress)="onKeyPress($event)">Générer</span>
+    </div>
 </form>
 
 @if (degresJours) {
-    <div>
-        <table class="table table-striped table-responsive">
-            <thead>
-                <tr>
-                    <th>Date</th>
-                    <th>Temperature moyenne</th>
-                    <th>Degré jour</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let degreJour of degresJours?.rapport">
-                    <td>{{degreJour.date}}</td>
-                    <td>{{degreJour.temperature}}</td>
-                    <td>{{degreJour.degreJour}}</td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
+<div>
+    <table class="table table-striped table-responsive">
+        <thead>
+            <tr>
+                <th>Date</th>
+                <th>Temperature moyenne</th>
+                <th>Degré jour</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let degreJour of degresJours?.rapport">
+                <td>{{degreJour.date}}</td>
+                <td>{{degreJour.temperature}}</td>
+                <td>{{degreJour.degreJour}}</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
 }
