--- a/ErabliereIU/src/rapport/degreejour/rapport-degre-jour.component.html
+++ b/ErabliereIU/src/rapport/degreejour/rapport-degre-jour.component.html
@@ -22,11 +22,11 @@
         </select>
         <input-error [errorObj]="errorObj" [controlName]="'idCapteur'"></input-error>
     </div>
-    <div class="form-group">
-        <label for="utiliserTrioDonnees">Utiliser temperature depuis trio de données</label>
-        <input name="utiliserTrioDonnees" type="checkbox" class="form-control-checkbox" id="utiliserTrioDonnees"
-            [(ngModel)]="form.utiliserTemperatureTrioDonnee" />
+    <div class="form-check">
+        <input name="utiliserTrioDonnees" type="checkbox" class="form-check-input" id="utiliserTrioDonnees"
+        [(ngModel)]="form.utiliserTemperatureTrioDonnee" />
         <input-error [errorObj]="errorObj" [controlName]="'utiliserTrioDonnees'"></input-error>
+        <label for="utiliserTrioDonnees">Utiliser temperature depuis trio de données</label>
     </div>
     <div class="form-group">
         <label for="seuil">Seuil</label>
