--- a/ErabliereIU/src/app/client-view/client-nav-bar/client-nav-bar.component.html
+++ b/ErabliereIU/src/app/client-view/client-nav-bar/client-nav-bar.component.html
@@ -68,17 +68,17 @@
                 </li>
             </ul>
             <div class="d-flex gap-2">
+                @if (useAuthentication && callFeatureEnable && callFeatureEnableForUser) {
+                <agora-call-service></agora-call-service>
+                }
                 @if (mapFeatureEnable) {
-                <button id="zone-carte-button" class="btn btn-primary" routerLink="/map">Carte</button>
+                <button id="zone-carte-button" class="btn btn-primary" routerLink="/map"><span>🗺️ </span>Carte</button>
                 }
                 @if (!useAuthentication || isAdminUser) {
                 <button id="zone-admin-button" class="btn btn-outline-primary" routerLink="/a">Érablière
                     Admin</button>
                 }
                 @if (useAuthentication) {
-                @if (callFeatureEnable && callFeatureEnableForUser) {
-                <agora-call-service></agora-call-service>
-                }
                 <connection-button (loginChange)="onLoginChange($event)" />
                 }
             </div>
