--- a/ErabliereIU/src/erabliereai/erabliereai-chat.component.html
+++ b/ErabliereIU/src/erabliereai/erabliereai-chat.component.html
@@ -7,19 +7,22 @@
 
 
 <div *ngIf="chatOpen" class="chat-window">
-  <button type="button" class="btn-close position-absolute top-0 end-0 mt-3 me-3" aria-label="Close" (click)="toggleChat()"></button>
+  <button type="button" class="btn-close position-absolute top-0 end-0 mt-3 me-3" aria-label="Close"
+    (click)="toggleChat()"></button>
   <section class="gradient-custom">
     <div class="container py-5">
       <div class="row">
         <div class="col-md-6 col-lg-5 col-xl-5 mb-4 mb-md-0">
-          <h5 class="font-weight-bold mb-3 text-center text-white">Conversation <span style="font-size: 1.2em; cursor: pointer;" (click)="hideDisplaySearch()">🔍</span></h5>
+          <h5 class="font-weight-bold mb-3 text-center text-white">Conversation <span
+              style="font-size: 1.2em; cursor: pointer;" (click)="hideDisplaySearch()">🔍</span></h5>
           <div *ngIf="displaySearch" class="row">
             <div class="col-12">
               <div class="form-outline form-white mb-4">
                 <label class="form-label text-white" for="form1">Rechercher une conversation</label>
                 <div class="input-group form-outline">
                   <input type="text" id="form1" class="form-control" (change)="searchConversation($event)">
-                  <button class="btn btn-light" type="button" id="button-addon2" (click)="fetchConversations()">🔍</button>
+                  <button class="btn btn-light" type="button" id="button-addon2"
+                    (click)="fetchConversations()">🔍</button>
                 </div>
               </div>
             </div>
@@ -43,37 +46,32 @@
                     style="cursor: pointer;">
                     <div class="d-flex flex-row">
                       <div class="pt-1">
-                        <p 
-                          class="small text-white" style="white-space: pre-wrap; word-wrap: break-word;">
-                            {{ elispseText(conversation.name, 100) }}
+                        <p class="small text-white" style="white-space: pre-wrap; word-wrap: break-word;">
+                          {{ elispseText(conversation.name, 100) }}
                         </p>
                       </div>
                     </div>
                   </div>
                   <div class="d-flex justify-content-between">
                     <span class="small text-white">
-                      {{ conversation.lastMessageDate != null ? formatMessageDate(conversation.lastMessageDate) : 'Inconnu' }}
+                      {{ conversation.lastMessageDate != null ? formatMessageDate(conversation.lastMessageDate) :
+                      'Inconnu' }}
                     </span>
-                    <span 
-                      (click)="deleteConversation(conversation)" 
-                      class="text-danger"
-                      style="cursor: pointer;"
-                      data-bs-toggle="tooltip"
-                      data-bs-placement="top"
-                      title="Supprimer la conversation"
-                      >X</span>
+                    <span (click)="deleteConversation(conversation)" class="text-danger" style="cursor: pointer;"
+                      data-bs-toggle="tooltip" data-bs-placement="top" title="Supprimer la conversation">X</span>
                   </div>
                 </li>
-                <li class="p-2 border-bottom" style="border-bottom: 1px solid rgba(255,255,255,.3) !important;" *ngIf="conversations.length >= top + skip">
+                <li class="p-2 border-bottom" style="border-bottom: 1px solid rgba(255,255,255,.3) !important;"
+                  *ngIf="conversations.length >= top + skip">
                   <div class="d-flex justify-content-center">
                     <div class="d-flex justify-content-between link-light" (click)="loadMore()"
-                    style="cursor: pointer;">
-                    <div class="d-flex flex-row">
-                      <div class="pt-1">
-                        <p class="small text-white">Charger plus de conversation</p>
+                      style="cursor: pointer;">
+                      <div class="d-flex flex-row">
+                        <div class="pt-1">
+                          <p class="small text-white">Charger plus de conversation</p>
+                        </div>
                       </div>
                     </div>
-                  </div>
                   </div>
                 </li>
               </ul>
@@ -88,13 +86,12 @@
                 <div class="card-header d-flex justify-content-between p-3"
                   style="border-bottom: 1px solid rgba(255,255,255,.3);">
                   <p class="fw-bold mb-0">{{ message.isUser ? "Vous" : "ErabliereAI" }}</p>
-                  <p class="text-light small mb-0"><i class="far fa-clock"></i> {{ formatMessageDate(message.createdAt) }}</p>
+                  <p class="text-light small mb-0"><i class="far fa-clock"></i> {{ formatMessageDate(message.createdAt)
+                    }}</p>
                 </div>
                 <div class="card-body">
-                  <p 
-                    [className]="message.isUser ? '' : 'mb-5'" 
-                    style="white-space: pre-wrap; word-wrap: break-word;">
-                      {{ message.content }}
+                  <p [className]="message.isUser ? '' : 'mb-5'" style="white-space: pre-wrap; word-wrap: break-word;">
+                    {{ message.content }}
                   </p>
                   <button class="btn btn-link" *ngIf="!message.isUser" (click)="traduire(message.content, i)">
                     Traduire <span style="font-size: 1.2em;">🌐</span>
@@ -103,10 +100,10 @@
               </div>
             </li>
             <li *ngIf="aiIsThinking">
-              <div class="spinner-border text-success" role="status">
+              <div class="spinner-border text-success">
                 <span class="visually-hidden">Pensif...</span>
               </div>
-              <p>ErabliereAI réfléchit...</p>
+              <p>ÉrabliereAI réfléchit...</p>
             </li>
             <li class="mb-3">
               <div class="form-outline form-white">
@@ -118,15 +115,30 @@
             <div class="row">
               <div class="col-4">
                 <label for="exampleFormControlSelect1" class="text-white form-label">Type de message</label>
-                <select class="form-select" id="exampleFormControlSelect1" (change)="updateMessageType($event)" style="min-width: fit-content;">
+                <select class="form-select" id="exampleFormControlSelect1" (change)="updateMessageType($event)"
+                  style="min-width: fit-content;">
                   <option value="Chat">Chat</option>
                   <option value="Completion">Completion</option>
                 </select>
+                <!-- Si le type de message est sur Chat, afficher un roue de configuration, sur le clic un input text sera afficher pour saisir la phrase système -->
+                
               </div>
-              <div class="col-8">
+              <div class="col-1">
+                <button *ngIf="typePrompt == 'Chat'" class="btn" style="margin-top: 15px;" (click)="toggleChatConfig()">
+                  <span style="font-size: 2em;">⚙️</span>
+                </button>
+              </div>
+              <div class="col-7">
                 <div class="btn-group float-end float-bottom">
                   <button type="button" class="btn btn-light btn-rounded" (click)="sendMessage()">📤 Envoyer</button>
                 </div>
+              </div>
+              <div *ngIf="chatConfig" class="form-outline form-white">
+                <label class="form-label" for="textAreaExample3">Phrase système</label>
+                <textarea class="form-control" id="textAreaExample3" rows="4" (change)="updateChatConfig($event)" [value]="currentSystemPhrase">
+                </textarea>
+                <!-- Ajouter un bouton pour remettre la phrase par défaut -->
+                <button class="btn btn-light mt-1" (click)="resetChatConfig()">Remettre par défaut</button>
               </div>
             </div>
           </ul>
