hologram admin page

--- a/ErabliereIU/src/app/admin-view/admin-nav-bar/admin-nav-bar.component.html
+++ b/ErabliereIU/src/app/admin-view/admin-nav-bar/admin-nav-bar.component.html
@@ -26,6 +26,11 @@
                         Clé d'API
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/a/hologram" routerLinkActive="active" ariaCurrentWhenActive="page">
+                        Clé de tunnel Hologram
+                    </a>
+                </li>
             </ul>
             <div class="d-flex gap-2">
                 <button id="zone-admin-button" class="btn btn-outline-primary" routerLink="">ÉrablièreIU</button>
