--- a/ErabliereIU/src/documentation/ajouter-documentation.component.html
+++ b/ErabliereIU/src/documentation/ajouter-documentation.component.html
@@ -5,21 +5,26 @@
     <span class="text-danger">{{generalError}}</span>
     <form [formGroup]="documentForm">
         <div class="form-group">
-            <label class="form-label">Titre: </label><input class="form-control" type="text" formControlName="title">
+            <label class="form-label" for="title">Titre: </label><input class="form-control" type="text" formControlName="title">
             <input-error [errorObj]="errorObj" [controlName]="'title'"></input-error>
         </div>
         <div class="form-group">
-            <label class="form-label">Texte: </label><input class="form-control" type="text" formControlName="text">
+            <label class="form-label" for="text">Texte: </label><input class="form-control" type="text" formControlName="text">
             <input-error [errorObj]="errorObj" [controlName]="'text'"></input-error>
         </div>
         <div class="form-group">
-            <label class="form-label">Fichier: </label><input class="form-control" type="file" formControlName="file" (change)="convertToBase64($event)">
+            <label class="form-label" for="file">Fichier: </label><input class="form-control" type="file" formControlName="file" (change)="convertToBase64($event)">
         </div>
         <input-error [errorObj]="errorObj" [controlName]="'file'"></input-error>
         <span class="text-danger">
             {{fileToLargeErrorMessage}}
         </span>
     </form>
-    <button id="creerDocument" class="btn btn-primary mt-3 mb-3 me-2" (click)="onButtonCreerClick()">Créer</button>
+    <button id="creerDocument" class="btn btn-primary mt-3 mb-3 me-2" (click)="onButtonCreerClick()">
+        Créer
+        @if (createDocumentLoading) {
+            <span class="spinner-border spinner-border-sm" aria-hidden="true"></span>
+        }
+    </button>
     <button id="annuler-creer-document" class="btn btn-secondary mt-3 mb-3" (click)="onButtonAnnulerClick()">Annuler</button>
 </div>
