--- a/ErabliereIU/src/erabliereai/erabliereai-chat.component.html
+++ b/ErabliereIU/src/erabliereai/erabliereai-chat.component.html
@@ -14,7 +14,8 @@
       <div class="row">
         <div class="col-md-6 col-lg-5 col-xl-5 mb-4 mb-md-0">
           <h5 class="font-weight-bold mb-3 text-center text-white">Conversation <span
-              style="font-size: 1.2em; cursor: pointer;" (click)="hideDisplaySearch()">🔍</span></h5>
+              style="font-size: 1.2em; cursor: pointer;" (click)="hideDisplaySearch()"
+              (keydown)="keyDownHideDisplaySearch($event)">🔍</span></h5>
           <div *ngIf="displaySearch" class="row">
             <div class="col-12">
               <div class="form-outline form-white mb-4">
@@ -32,7 +33,7 @@
               <ul class="list-unstyled mb-0">
                 <li class="p-2 border-bottom" style="border-bottom: 1px solid rgba(255,255,255,.3) !important;">
                   <div class="d-flex justify-content-between link-light" (click)="selectConversation(null)"
-                    style="cursor: pointer;">
+                    style="cursor: pointer;" (keydown)="keyDownNewConversation($event)">
                     <div class="d-flex flex-row">
                       <div class="pt-1">
                         <p class="small text-white" style="min-width: 250px;">📄 Nouvelle conversation</p>
@@ -121,21 +122,21 @@
                   <option value="Completion">Completion</option>
                 </select>
                 <!-- Si le type de message est sur Chat, afficher un roue de configuration, sur le clic un input text sera afficher pour saisir la phrase système -->
-                
+
               </div>
-              <div class="col-1">
-                <button *ngIf="typePrompt == 'Chat'" class="btn" style="margin-top: 15px;" (click)="toggleChatConfig()">
+              <div class="col-8">
+                <button *ngIf="typePrompt == 'Chat'" class="btn" style="margin-top: 15px;" (click)="toggleChatConfig()"
+                  title="Modifier la phrase système">
                   <span style="font-size: 2em;">⚙️</span>
                 </button>
-              </div>
-              <div class="col-7">
                 <div class="btn-group float-end float-bottom">
                   <button type="button" class="btn btn-light btn-rounded" (click)="sendMessage()">📤 Envoyer</button>
                 </div>
               </div>
               <div *ngIf="chatConfig" class="form-outline form-white">
                 <label class="form-label" for="textAreaExample3">Phrase système</label>
-                <textarea class="form-control" id="textAreaExample3" rows="4" (change)="updateChatConfig($event)" [value]="currentSystemPhrase">
+                <textarea class="form-control" id="textAreaExample3" rows="4" (change)="updateChatConfig($event)"
+                  [value]="currentSystemPhrase">
                 </textarea>
                 <!-- Ajouter un bouton pour remettre la phrase par défaut -->
                 <button class="btn btn-light mt-1" (click)="resetChatConfig()">Remettre par défaut</button>
