--- a/ErabliereIU/src/rapport/rapports.component.html
+++ b/ErabliereIU/src/rapport/rapports.component.html
@@ -25,13 +25,13 @@
             <h4>Rapports enregistrés</h4>
             <ul class="list-group">
                 @for (rapport of rapportsSaved; track rapport) {
-                <button class="list-group-item" [class.active]="rapportSelected?.id === rapport.id" style="cursor: pointer;" (click)="selectReport(rapport)">
-                    <a class="m-1">{{rapport.type}} - {{ formatDate(rapport.dateDebut) }} - {{ formatDate(rapport.dateFin) }}</a>
+                <a class="list-group-item" [class.active]="rapportSelected?.id === rapport.id" style="cursor: pointer;" (click)="selectReport(rapport)">
+                    <a class="m-1">{{rapport.type}} - {{rapport.nom}} - {{ formatDate(rapport.dateDebut) }} - {{ formatDate(rapport.dateFin) }}</a>
                     <div class="btn-group" style="float: right;">
                         <button class="btn btn-sm btn-info" (click)="refreshRapport(rapport)">Rafraichir</button>
                         <button class="btn btn-sm btn-danger" (click)="deleteRapport(rapport)">Supprimer</button>
                     </div>
-                </button>
+                </a>
                 }
             </ul>
         </div>
