--- a/ErabliereIU/src/erabliereai/window/erabliereai-window.component.html
+++ b/ErabliereIU/src/erabliereai/window/erabliereai-window.component.html
@@ -1,142 +1,138 @@
 <div class="chat-window">
-    <button type="button" class="btn-close position-absolute top-0 end-0 mt-3 me-3" aria-label="Close"
-      (click)="closeChatWindowEvent.emit(true)"></button>
-    <section class="gradient-custom">
-      <div class="container py-5">
-        <div class="row">
-          <div class="col-md-6 col-lg-5 col-xl-5 mb-4 mb-md-0">
-            <h5 class="font-weight-bold mb-3 text-center text-white">Conversation <span
-                style="font-size: 1.2em; cursor: pointer;" (click)="hideDisplaySearch()"
-                (keydown)="keyDownHideDisplaySearch($event)">🔍</span></h5>
-            <div *ngIf="displaySearch" class="row">
-              <div class="col-12">
-                <div class="form-outline form-white mb-4">
-                  <label class="form-label text-white" for="form1">Rechercher une conversation</label>
-                  <div class="input-group form-outline">
-                    <input type="text" id="form1" class="form-control" (change)="searchConversation($event)">
-                    <button class="btn btn-light" type="button" id="button-addon2"
-                      (click)="fetchConversations()">🔍</button>
-                  </div>
+  <button type="button" class="btn-close position-absolute top-0 end-0 mt-3 me-3" aria-label="Close"
+    (click)="closeChatWindowEvent.emit(true)"></button>
+  <section class="gradient-custom">
+    <div class="container py-5">
+      <div class="row">
+        <div class="col-md-6 col-lg-5 col-xl-5 mb-4 mb-md-0">
+          <h5 class="font-weight-bold mb-3 text-center text-white">Conversation <span
+              style="font-size: 1.2em; cursor: pointer;" (click)="hideDisplaySearch()"
+              (keydown)="keyDownHideDisplaySearch($event)">🔍</span></h5>
+          <div *ngIf="displaySearch" class="row">
+            <div class="col-12">
+              <div class="form-outline form-white mb-4">
+                <label class="form-label text-white" for="form1">Rechercher une conversation</label>
+                <div class="input-group form-outline">
+                  <input type="text" id="form1" class="form-control" (change)="searchConversation($event)">
+                  <button class="btn btn-light" type="button" id="button-addon2"
+                    (click)="fetchConversations()">🔍</button>
                 </div>
               </div>
             </div>
-            <div class="card mask-custom">
-              <div class="card-body">
-                <ul class="list-unstyled mb-0">
-                  <li class="p-2 border-bottom" style="border-bottom: 1px solid rgba(255,255,255,.3) !important;">
-                    <div class="d-flex justify-content-between link-light" (click)="selectConversation(null)"
-                      style="cursor: pointer;" (keydown)="keyDownNewConversation($event)">
-                      <div class="d-flex flex-row">
-                        <div class="pt-1">
-                          <p class="small text-white" style="min-width: 250px;">📄 Nouvelle conversation</p>
-                        </div>
+          </div>
+          <div class="card mask-custom">
+            <div class="card-body">
+              <ul class="list-unstyled mb-0">
+                <li class="p-2 border-bottom" style="border-bottom: 1px solid rgba(255,255,255,.3) !important;">
+                  <div class="d-flex justify-content-between link-light" (click)="selectConversation(null)"
+                    style="cursor: pointer;" (keydown)="keyDownNewConversation($event)">
+                    <div class="d-flex flex-row">
+                      <div class="pt-1">
+                        <p class="small text-white" style="min-width: 250px;">📄 Nouvelle conversation</p>
                       </div>
                     </div>
-                  </li>
-                  <li class="p-2 border-bottom" style="border-bottom: 1px solid rgba(255,255,255,.3) !important;"
-                    *ngFor="let conversation of conversations">
-                    <div class="d-flex justify-content-between link-light" (click)="selectConversation(conversation)"
+                  </div>
+                </li>
+                <li class="p-2 border-bottom" style="border-bottom: 1px solid rgba(255,255,255,.3) !important;"
+                  *ngFor="let conversation of conversations">
+                  <div class="d-flex justify-content-between link-light" (click)="selectConversation(conversation)"
+                    style="cursor: pointer;">
+                    <div class="d-flex flex-row">
+                      <div class="pt-1">
+                        <p class="small text-white" style="white-space: pre-wrap; word-wrap: break-word;">
+                          {{ elispseText(conversation.name ?? '', 100) }}
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="d-flex justify-content-between">
+                    <span class="small text-white">
+                      {{ conversation.isPublic ? '👥 ' : '🔒 '}}
+                      {{ conversation.lastMessageDate != null ? formatMessageDate(conversation.lastMessageDate) :
+                      'Inconnu' }}
+                    </span>
+                    <span (click)="deleteConversation(conversation)" class="text-danger" style="cursor: pointer;"
+                      data-bs-toggle="tooltip" data-bs-placement="top" title="Supprimer la conversation">X</span>
+                  </div>
+                </li>
+                <li class="p-2 border-bottom" style="border-bottom: 1px solid rgba(255,255,255,.3) !important;"
+                  *ngIf="conversations.length >= top + skip">
+                  <div class="d-flex justify-content-center">
+                    <div class="d-flex justify-content-between link-light" (click)="loadMore()"
                       style="cursor: pointer;">
                       <div class="d-flex flex-row">
                         <div class="pt-1">
-                          <p class="small text-white" style="white-space: pre-wrap; word-wrap: break-word;">
-                            {{ elispseText(conversation.name, 100) }}
-                          </p>
+                          <p class="small text-white">Charger plus de conversation</p>
                         </div>
                       </div>
                     </div>
-                    <div class="d-flex justify-content-between">
-                      <span class="small text-white">
-                        {{ conversation.lastMessageDate != null ? formatMessageDate(conversation.lastMessageDate) :
-                        'Inconnu' }}
-                      </span>
-                      <span (click)="deleteConversation(conversation)" class="text-danger" style="cursor: pointer;"
-                        data-bs-toggle="tooltip" data-bs-placement="top" title="Supprimer la conversation">X</span>
-                    </div>
-                  </li>
-                  <li class="p-2 border-bottom" style="border-bottom: 1px solid rgba(255,255,255,.3) !important;"
-                    *ngIf="conversations.length >= top + skip">
-                    <div class="d-flex justify-content-center">
-                      <div class="d-flex justify-content-between link-light" (click)="loadMore()"
-                        style="cursor: pointer;">
-                        <div class="d-flex flex-row">
-                          <div class="pt-1">
-                            <p class="small text-white">Charger plus de conversation</p>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </li>
-                </ul>
-              </div>
+                  </div>
+                </li>
+              </ul>
             </div>
           </div>
-  
-          <div class="col-md-6 col-lg-7 col-xl-7">
-            <ul class="list-unstyled text-white">
-              <li class="d-flex justify-content-between mb-4" *ngFor="let message of messages; index as i">
-                <div class="card mask-custom">
-                  <div class="card-header d-flex justify-content-between p-3"
-                    style="border-bottom: 1px solid rgba(255,255,255,.3);">
-                    <p class="fw-bold mb-0">{{ message.isUser ? "Vous" : "ErabliereAI" }}</p>
-                    <p class="text-light small mb-0"><i class="far fa-clock"></i> {{ formatMessageDate(message.createdAt)
-                      }}</p>
-                  </div>
-                  <div class="card-body">
-                    <div [className]="message.isUser ? '' : 'mb-5'" style="white-space: pre-wrap; word-wrap: break-word;">
-                      <eapi-markdown [content]="message.content"></eapi-markdown>
-                    </div>
-                    <button class="btn btn-link" *ngIf="!message.isUser" (click)="traduire(message.content, i)">
-                      Traduire <span style="font-size: 1.2em;">🌐</span>
-                    </button>
-                  </div>
-                </div>
-              </li>
-              <li *ngIf="aiIsThinking">
-                <div class="spinner-border text-success">
-                  <span class="visually-hidden">Pensif...</span>
-                </div>
-                <p>ÉrabliereAI réfléchit...</p>
-              </li>
-              <li class="mb-3">
-                <div class="form-outline form-white">
-                  <textarea class="form-control" id="textAreaExample3" rows="4" (change)="updateNewMessage($event)">
-                  </textarea>
-                  <label class="form-label" for="textAreaExample3">Message</label>
-                </div>
-              </li>
-              <div class="row">
-                <div class="col-4">
-                  <label for="exampleFormControlSelect1" class="text-white form-label">Type de message</label>
-                  <select class="form-select" id="exampleFormControlSelect1" (change)="updateMessageType($event)"
-                    style="min-width: fit-content;">
-                    <option value="Chat">Chat</option>
-                    <option value="Completion">Completion</option>
-                  </select>
-                  <!-- Si le type de message est sur Chat, afficher un roue de configuration, sur le clic un input text sera afficher pour saisir la phrase système -->
-  
-                </div>
-                <div class="col-8">
-                  <button *ngIf="typePrompt == 'Chat'" class="btn" style="margin-top: 15px;" (click)="toggleChatConfig()"
-                    title="Modifier la phrase système">
-                    <span style="font-size: 2em;">⚙️</span>
-                  </button>
-                  <div class="btn-group float-end float-bottom">
-                    <button type="button" class="btn btn-light btn-rounded" (click)="sendMessage()">📤 Envoyer</button>
-                  </div>
-                </div>
-                <div *ngIf="chatConfig" class="form-outline form-white">
-                  <label class="form-label" for="textAreaExample3">Phrase système</label>
-                  <textarea class="form-control" id="textAreaExample3" rows="4" (change)="updateChatConfig($event)"
-                    [value]="currentSystemPhrase">
-                  </textarea>
-                  <!-- Ajouter un bouton pour remettre la phrase par défaut -->
-                  <button class="btn btn-light mt-1" (click)="resetChatConfig()">Remettre par défaut</button>
-                </div>
+        </div>
+
+        <div class="col-md-6 col-lg-7 col-xl-7">
+          <div *ngIf="currentConversation" class="mb-3 d-flex align-items-center">
+            <span class="text-white me-2">
+              <strong>{{ currentConversation.isPublic ? '👥' : '🔒' }}</strong>
+            </span>
+            <button class="btn btn-sm btn-secondary" (click)="toggleVisibilityCurrentConversation()">
+              {{ currentConversation.isPublic ? 'Rendre privée 🔒' : 'Rendre publique 👥' }}
+            </button>
+            @if (currentConversation.isPublic)
+            {
+            <button class="btn btn-sm btn-primary ms-2" (click)="copyShareLink()">
+              Copier le lien de partage 🔗
+            </button>
+            }
+          </div>
+
+          @if (currentConversation)
+          {
+            <erabliereai-message-list [aiIsThinking]="aiIsThinking" [enableTranslation]="true"
+              [conversation]="currentConversation"></erabliereai-message-list>
+          }
+
+
+          <div class="form-outline form-white">
+            <textarea class="form-control" id="textAreaExample3" rows="4"
+              (change)="updateNewMessage($event)"></textarea>
+            <label class="form-label text-white" for="textAreaExample3">Message</label>
+          </div>
+
+          <div class="row">
+            <div class="col-4">
+              <label for="exampleFormControlSelect1" class="text-white form-label">Type de message</label>
+              <select class="form-select" id="exampleFormControlSelect1" (change)="updateMessageType($event)"
+                style="min-width: fit-content;">
+                <option value="Chat">Chat</option>
+                <option value="Completion">Completion</option>
+              </select>
+              <!-- Si le type de message est sur Chat, afficher un roue de configuration, sur le clic un input text sera afficher pour saisir la phrase système -->
+
+            </div>
+            <div class="col-8">
+              <button *ngIf="typePrompt == 'Chat'" class="btn" style="margin-top: 15px;" (click)="toggleChatConfig()"
+                title="Modifier la phrase système">
+                <span style="font-size: 2em;">⚙️</span>
+              </button>
+              <div class="btn-group float-end float-bottom">
+                <button type="button" class="btn btn-light btn-rounded" (click)="sendMessage()">📤 Envoyer</button>
               </div>
-            </ul>
+            </div>
+            <div *ngIf="chatConfig" class="form-outline form-white">
+              <label class="form-label text-white" for="textAreaExample3">Phrase système</label>
+              <textarea class="form-control" id="textAreaExample3" rows="4" (change)="updateChatConfig($event)"
+                [value]="currentSystemPhrase">
+                  </textarea>
+              <!-- Ajouter un bouton pour remettre la phrase par défaut -->
+              <button class="btn btn-light mt-1" (click)="resetChatConfig()">Remettre par défaut</button>
+            </div>
           </div>
         </div>
       </div>
-    </section>
-  </div>
+    </div>
+  </section>
+</div>
