--- a/ErabliereIU/src/map/erablieres-map.component.html
+++ b/ErabliereIU/src/map/erablieres-map.component.html
@@ -1,3 +1,5 @@
+<script src="https://api.mapbox.com/mapbox-gl-js/v3.10.0/mapbox-gl.js"></script>
+
 <div class="container-fluid" style="height: max-content;">
     <div class="row">
         <div class="col-12">
