--- a/ErabliereIU/src/pagination/pagination.component.html
+++ b/ErabliereIU/src/pagination/pagination.component.html
@@ -1,11 +1,22 @@
 <nav aria-label="Pages de la liste de documentations">
     <ul class="pagination justify-content-center">
-        <li class="page-item"><button (click)="pagePrecedente()" type="button" class="btn btn-outline-primary me-2" [disabled]="estPremierePage">Précédent</button></li>
-        @for(page of pages; track page) {
-            <li class="page-item"><button (click)="changerPage(page)" type="button" class="btn btn-outline-primary me-2{{ page === this.pageActuelle ? ' active' : null }}" >{{page}}</button></li>
-        }
-        <li class="page-item"><button (click)="pageSuivante()" type="button" class="btn btn-outline-primary" [disabled]="estDernierePage">Suivant</button></li>
+        <li class="page-item">
+            <button (click)="pagePrecedente()" type="button" class="btn btn-outline-primary me-2" [disabled]="estPremierePage"><</button>
+        </li>
+        <ng-container *ngFor="let page of pagesToShow">
+            <li class="page-item" *ngIf="page !== '...'">
+                <button (click)="changerPage(page)" type="button"
+                    class="btn btn-outline-primary me-2{{ page === pageActuelle ? ' active' : '' }}">
+                    {{page}}
+                </button>
+            </li>
+            <li class="page-item" *ngIf="page === '...'">
+                <span class="btn btn-outline-secondary me-2 disabled">...</span>
+            </li>
+        </ng-container>
+        <li class="page-item">
+            <button (click)="pageSuivante()" type="button" class="btn btn-outline-primary" [disabled]="estDernierePage">></button>
+        </li>
     </ul>
-
-    <p class="text-center">{{this.numeroPremierElementDeLaPage}} - {{this.numeroDernierElementDeLaPage}}</p>
+    <p class="text-center">{{numeroPremierElementDeLaPage}} - {{numeroDernierElementDeLaPage}}</p>
 </nav>
