--- a/ErabliereIU/src/notes/note.component.html
+++ b/ErabliereIU/src/notes/note.component.html
@@ -2,60 +2,70 @@
   <h4 class="card-header">{{ note.title }}</h4>
 
   <div class="card-body">
-    <p class="noteDescription card-text">{{ note.text }}</p>
+    <div class="row">
+      <div class="col-md-10">
+        <p class="noteDescription card-text">{{ note.text }}</p>
 
-    @if (note.fileExtension === 'csv') {
-      <p class="card-text">{{ note.decodedTextFile }}</p>
-    }
+        @if (note.fileExtension === 'csv') {
+        <p class="card-text">{{ note.decodedTextFile }}</p>
+        }
 
-    <p class="noteDate card-text"><small class="text-muted">Date de Création: {{ note.noteDate | date: 'dd-MM-yyyy' }}</small></p>
+        <p class="noteDate card-text"><small class="text-muted">Date de Création: {{ note.noteDate | date: 'dd-MM-yyyy'
+            }}</small></p>
 
-    @if (note.rappel) {
-      <div class="noteReminder card bg-light p-3 mb-3 d-inline-block">
-        <h5 class="card-title">Rappel</h5>
-        <div class="card-text">
-          <small class="text-muted">
-            @if (note.rappel.dateRappel) {
+      </div>
+      <div class="col-md-2">
+        @if (note.rappel) {
+        <div class="noteReminder card bg-light p-3 mb-3 d-inline-block" style="width: max-content;">
+          <h5 class="card-title">Rappel</h5>
+          <div class="card-text">
+            <small class="text-muted">
+              @if (note.rappel.dateRappel) {
               <span>Début: {{ note.rappel.dateRappel | date: 'dd-MM-yyyy' }}</span>
               }<br>
               @if (note.rappel.dateRappelFin) {
-                <span>Fin: {{ note.rappel.dateRappelFin | date: 'dd-MM-yyyy' }}</span>
-                }@if (note.rappel.dateRappelFin) {
-                <br>
-                }
-                @if (note.rappel.periodicite) {
-                  <span>Periodicité: {{ note.rappel.periodicite }}</span>
-                  }@if (note.rappel.periodicite) {
-                  <br>
-                  }
-                  @if (note.rappel.isActive !== null) {
-                    <span>Statut: {{ note.rappel.isActive ? 'Actif' : 'Inactif' }}</span>
-                  }
-                </small>
-              </div>
-            </div>
-          }
-
-          <br>
-
-            <div class="btn-group me-2">
-              <button class="btn btn-info btn-sm" (click)="selectEditNote()">Modifier</button>
-            </div>
-            <div class="btn-group">
-              <button class="btn btn-danger btn-sm" (click)="deleteNote()">Supprimer</button>
-            </div>
+              <span>Fin: {{ note.rappel.dateRappelFin | date: 'dd-MM-yyyy' }}</span>
+              }@if (note.rappel.dateRappelFin) {
+              <br>
+              }
+              @if (note.rappel.periodicite) {
+              <span>Periodicité: {{ note.rappel.periodicite }}</span>
+              }@if (note.rappel.periodicite) {
+              <br>
+              }
+              @if (note.rappel.isActive !== null) {
+              <span>Statut: {{ note.rappel.isActive ? 'Actif' : 'Inactif' }}</span>
+              }
+            </small>
           </div>
-
-          @if (note.fileExtension !== 'csv') {
-            <div>
-              <div class="container">
-                @if (note.file !== '') {
-                  <img
-                    class="card-img-bottom img-thumbnail rounded mx-auto d-block"
-                    style="max-width: 50%;"
-                    src="data:image/png;base64,{{ note.file }}" />
-                }
-              </div>
-            </div>
-          }
         </div>
+        }
+      </div>
+    </div>
+
+    <div class="btn-group me-2">
+      <button class="btn btn-info btn-sm" (click)="selectEditNote()">Modifier</button>
+    </div>
+    <div class="btn-group me-2">
+      <button class="btn btn-primary btn-sm" (click)="modifierImage()">Modifier l'image</button>
+    </div>
+    @if (userIsInRole('ErabliereAIUser')) {
+    <div class="btn-group me-2">
+      <button class="btn btn-secondary btn-sm" (click)="genererUneImageParIA()">Générer une image</button>
+    </div>
+    }
+    <div class="btn-group">
+      <button class="btn btn-danger btn-sm" (click)="deleteNote()">Supprimer</button>
+    </div>
+
+    @if (note.fileExtension !== 'csv') {
+    <div>
+      <div class="container">
+        @if (note.file !== '') {
+        <img class="card-img-bottom img-thumbnail rounded mx-auto d-block" style="max-width: 50%;"
+          src="data:image/png;base64,{{ note.file }}" alt="{{ note.title }}" />
+        }
+      </div>
+    </div>
+    }
+  </div>
