--- a/ErabliereIU/src/notes/modifier-note.component.html
+++ b/ErabliereIU/src/notes/modifier-note.component.html
@@ -1,46 +1,49 @@
 @if(note) {
-  <div>
-    <span class="text-danger">
-        {{generalError}}
-    </span>
-    <form [formGroup]="noteForm" id="modifier-note" novalidate>
-      <div [class]="'form-group mb-3' + (noteForm.controls['title'].touched ? ' was-validated' : '')">
-        <label class="form-label" for="modifier-note-title">Titre: </label>
-        <input class="form-control" type="text" formControlName="title" id="modifier-note-title">
-        @if (noteForm.controls['title'].errors && noteForm.controls['title'].touched) {
+<div>
+  <form [formGroup]="noteForm" id="modifier-note" novalidate>
+    <div class="row">
+      <div class="col-md-6">
+        <div [class]="'form-group mb-3' + (noteForm.controls['title'].touched ? ' was-validated' : '')">
+          <label class="form-label" for="modifier-note-title">Titre: </label>
+          <input class="form-control" type="text" formControlName="title" id="modifier-note-title">
+          @if (noteForm.controls['title'].errors && noteForm.controls['title'].touched) {
           <div>
             @if (noteForm.controls['title'].errors!.required) {
-              <small class="text-danger">Titre obligatoire.</small>
+            <small class="text-danger">Titre obligatoire.</small>
             }
             @if (noteForm.controls['title'].errors!.maxlength) {
-              <small class="text-danger">Taille maximal dépassée.</small>
+            <small class="text-danger">Taille maximal dépassée.</small>
             }
           </div>
-        }
-        <input-error [errorObj]="errorObj" [controlName]="'title'"></input-error>
-      </div>
-      <div [class]="'form-group mb-3' + (noteForm.controls['text'].touched ? ' was-validated' : '')">
-        <label class="form-label" for="modifier-note-text">Texte: </label>
-        <input class="form-control" type="text" formControlName="text" id="modifier-note-text">
-        @if (noteForm.controls['text'].errors && noteForm.controls['text'].touched) {
+          }
+          <input-error [errorObj]="errorObj" [controlName]="'title'"></input-error>
+        </div>
+        <div [class]="'form-group mb-3' + (noteForm.controls['text'].touched ? ' was-validated' : '')">
+          <label class="form-label" for="modifier-note-text">Texte: </label>
+          <input class="form-control" type="text" formControlName="text" id="modifier-note-text">
+          @if (noteForm.controls['text'].errors && noteForm.controls['text'].touched) {
           <div>
             @if (noteForm.controls['text'].errors!.maxlength) {
-              <small class="text-danger">Taille maximal dépassée.</small>
+            <small class="text-danger">Taille maximal dépassée.</small>
             }
           </div>
-        }
-        <input-error [errorObj]="errorObj" [controlName]="'text'"></input-error>
+          }
+          <input-error [errorObj]="errorObj" [controlName]="'text'"></input-error>
+        </div>
+        <div [class]="'form-group mb-3' + (noteForm.controls['noteDate'].touched ? ' was-validated' : '')">
+          <label class="form-label" for="modifier-note-noteDate">Date de la note: </label>
+          <input class="form-control" type="text" formControlName="noteDate" id="modifier-note-noteDate">
+          <input-error [errorObj]="errorObj" [controlName]="'noteDate'"></input-error>
+        </div>
       </div>
-      <div [class]="'form-group mb-3' + (noteForm.controls['noteDate'].touched ? ' was-validated' : '')">
-        <label class="form-label" for="modifier-note-noteDate">Date de la note: </label>
-        <input class="form-control" type="text" formControlName="noteDate" id="modifier-note-noteDate">
-        <input-error [errorObj]="errorObj" [controlName]="'noteDate'"></input-error>
-      </div>
-      <div class="form-group mb-3">
-        <input class="form-check-input me-2" type="checkbox" formControlName="reminderEnabled" id="modifier-note-reminderEnabled" />
-        <label class="form-check-label" for="modifier-note-reminderEnabled">{{note.rappel ? 'Modifier le rappel' : 'Ajouter un rappel'}}</label>
-      </div>
-      @if(displayReminder) {
+      <div class="col-md-6">
+        <div class="form-group mb-3">
+          <input class="form-check-input me-2" type="checkbox" formControlName="reminderEnabled"
+            id="modifier-note-reminderEnabled" />
+          <label class="form-check-label" for="modifier-note-reminderEnabled">{{note.rappel ? 'Modifier le rappel' :
+            'Ajouter un rappel'}}</label>
+        </div>
+        @if(displayReminder) {
         <div class="form-group mb-3">
           @if (noteForm.controls['isActive'].value) {
           <button class="btn btn-warning" (click)="toggleActiveStatus()">Désactiver le rappel</button>
@@ -52,11 +55,11 @@
           <label for="dateRappel">Date Rappel</label>
           <input type="date" id="dateRappel" class="form-control" formControlName="dateRappel">
           @if (noteForm.controls['dateRappel'].errors && noteForm.controls['dateRappel'].touched) {
-            <div>
-              @if (noteForm.controls['dateRappel'].errors!.dateRappelRequired) {
-                <small class="text-danger">Date de rappel obligatoire.</small>
-              }
-            </div>
+          <div>
+            @if (noteForm.controls['dateRappel'].errors!.dateRappelRequired) {
+            <small class="text-danger">Date de rappel obligatoire.</small>
+            }
+          </div>
           }
           <input-error [errorObj]="errorObj" [controlName]="'dateRappel'"></input-error>
         </div>
@@ -65,18 +68,19 @@
           <label for="dateRappelFin">Date Rappel Fin</label>
           <input type="date" id="dateRappelFin" class="form-control" formControlName="dateRappelFin">
           @if (noteForm.controls['dateRappelFin'].errors && noteForm.controls['dateRappelFin'].touched) {
-            <div>
-              @if (noteForm.controls['dateRappelFin'].errors!.dateRappelFinBeforeDateRappel) {
-                <small class="text-danger">Date de fin de rappel doit être après ou égale à la date de début de rappel.</small>
-              }
-            </div>
+          <div>
+            @if (noteForm.controls['dateRappelFin'].errors!.dateRappelFinBeforeDateRappel) {
+            <small class="text-danger">Date de fin de rappel doit être après ou égale à la date de début de
+              rappel.</small>
+            }
+          </div>
           }
           <input-error [errorObj]="errorObj" [controlName]="'dateRappelFin'"></input-error>
         </div>
 
-        <div [class]="'form-group mb-3' + (noteForm.controls['periodicite'].touched ? ' was-validated' : '')">
-          <label for="periodicite">Periodicité</label>
-          <select id="periodicite" class="form-control" formControlName="periodicite">
+        <div [class]="'form-group mb-3' + (noteForm.controls['rappel.periodicite'].touched ? ' was-validated' : '')">
+          <label for="rappel.periodicite">Periodicité</label>
+          <select id="rappel.periodicite" class="form-control" formControlName="rappel.periodicite">
             <option value="Aucune">Aucune</option>
             <option value="annuel">Annuel</option>
             <option value="mensuel">Mensuel</option>
@@ -84,18 +88,24 @@
             <option value="hebdo">Hebdomadaire</option>
             <option value="quotidien">Quotidien</option>
           </select>
-          @if (noteForm.controls['periodicite'].errors && noteForm.controls['periodicite'].touched) {
-            <div>
-              @if (noteForm.controls['periodicite'].errors!.datesRequiredForPeriodicite) {
-                <small class="text-danger">Date de fin de rappel obligatoire pour une périodicité.</small>
-              }
-            </div>
+          @if (noteForm.controls['rappel.periodicite'].errors && noteForm.controls['rappel.periodicite'].touched) {
+          <div>
+            @if (noteForm.controls['rappel.periodicite'].errors!.datesRequiredForPeriodicite) {
+            <small class="text-danger">Date de fin de rappel obligatoire pour une périodicité.</small>
+            }
+          </div>
           }
-          <input-error [errorObj]="errorObj" [controlName]="'periodicite'"></input-error>
+          <input-error [errorObj]="errorObj" [controlName]="'rappel.periodicite'"></input-error>
         </div>
-      }
-      <button id="modifierNote" class="btn btn-primary me-2" (click)="onButtonModifierClick()">Modifier</button>
-      <button id="annulerModifierNote" class="btn btn-secondary" (click)="onButtonAnnuleClick()">Annuler</button>
-    </form>
-  </div>
+        }
+      </div>
+    </div>
+    <button id="modifierNote" class="btn btn-primary me-2" (click)="onButtonModifierClick()">Modifier</button>
+    <button id="annulerModifierNote" class="btn btn-secondary" (click)="onButtonAnnuleClick()">Annuler</button>
+    <div class="row"><span class="text-danger">
+        {{generalError}}
+      </span>
+    </div>
+  </form>
+</div>
 }
