--- a/ErabliereIU/src/styles.css
+++ b/ErabliereIU/src/styles.css
@@ -137,6 +137,17 @@
     background: linear-gradient(to bottom right, rgb(91, 243, 116), rgb(22, 248, 82))
 }
 
+.gradient-custom-header {
+    /* fallback for old browsers */
+    background: #17d12a;
+
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to bottom right, rgb(36, 194, 68), rgb(37, 201, 64));
+
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to bottom right, rgb(36, 196, 68), rgb(25, 175, 50))
+}
+
 .mask-custom {
     background: rgba(24, 24, 16, .2);
     border-radius: 2em;
